<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2" >

    <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="50dp"
       android:id="@+id/tab1"
       >
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/u6"
           android:layout_centerVertical="true"
           android:id="@+id/back"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/back"
           android:text="@string/register"
           android:layout_centerVertical="true"
           android:textSize="20sp" />

	</RelativeLayout>
	
	 <EditText
       android:id="@+id/password1"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:hint="@string/password1"
       android:layout_below="@+id/tab1"
       android:layout_centerHorizontal="true"
       android:background="@drawable/phone_number"
       android:layout_marginTop="15dp"
       />
   
	  <EditText
       android:id="@+id/password2"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:hint="@string/password2"
       android:layout_below="@+id/password1"
       android:layout_centerHorizontal="true"
       android:background="@drawable/phone_number"
       android:layout_marginTop="15dp"
       />
	  
	  <Button
	      android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/next_button_shape"
           android:hint="@string/next"
           android:layout_below="@+id/password2"
           android:layout_marginTop="15dp"
           android:id="@+id/next"
           android:layout_alignLeft="@+id/password1"
           android:layout_centerHorizontal="true"
           android:textColor="#ffffff"
	      />
</RelativeLayout>
