<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    >

   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="50dp"
       android:id="@+id/tab1"
       >
       <ImageView
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/u6"
           android:layout_centerVertical="true"
           android:id="@+id/back"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/back"
           android:text="@string/register"
           android:layout_centerVertical="true"
           android:textSize="20sp" />

	</RelativeLayout>
	
   <EditText
       android:id="@+id/phonenumber"
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:hint="@string/phonenumber"
       android:layout_below="@+id/tab1"
       android:layout_centerHorizontal="true"
       android:background="@drawable/phone_number"
       android:layout_marginTop="15dp"
       />
   
  
       <EditText
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/phone_number"
           android:hint="@string/message_check_number"
           android:layout_centerHorizontal="true"
           android:id="@+id/check_number"
           android:layout_below="@+id/phonenumber"
           android:layout_marginTop="15dp"
           android:layout_alignLeft="@+id/phonenumber"
           />
       
        <TextView
            android:text="短信验证码会在一分钟内发到手机"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/check_number"
            android:layout_alignLeft="@+id/check_number"
            android:id="@+id/send_number"
            />
 
   
   		 <Button
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:background="@drawable/next_button_shape"
           android:hint="@string/next"
           android:layout_below="@+id/send_number"
           android:layout_marginTop="15dp"
           android:id="@+id/next"
           android:layout_alignLeft="@+id/phonenumber"
           android:layout_centerHorizontal="true"
      	   android:textColor="#ffffff"
           />

   		 <Button
   		     android:id="@+id/get"
   		     android:layout_width="wrap_content"
   		     android:layout_height="wrap_content"
   		     android:layout_alignRight="@+id/phonenumber"
   		     android:layout_below="@+id/phonenumber"
   		     android:layout_marginTop="15dp"
   		     android:background="@drawable/phone_number"  		     
   		     android:hint="@string/get" />

</RelativeLayout>
