<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >


     <ScrollView 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         >
        
         <RelativeLayout 
             android:layout_height="wrap_content"
             android:layout_width="fill_parent">
             
             <TextView
      			 android:id="@+id/status_tv"
       			 android:layout_width="150dp"
       			 android:layout_height="wrap_content"
       			 android:layout_alignParentRight="true"
                 android:layout_marginTop="40dp"
                 android:gravity="center"
                 android:text="status"
                 android:background="@color/project_color_bg"
                 android:textSize="24sp" />
             
   			 <TextView
                 android:id="@+id/text1" 
                 android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
        		 android:text="@string/picking_title_tip"
       			 android:textSize="24sp"
    		     android:textStyle="bold"
      			 android:layout_below="@+id/status_tv"
         		 android:layout_marginTop="60dp"
		         android:layout_marginLeft="30dp"/>
     
   			  <TextView 
      			 android:id="@+id/text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/picking_title_warm_tip"
                 android:textSize="18sp"
                 android:layout_below="@+id/text1"
                 android:layout_marginLeft="30dp"/>
     
   			  <TextView 
                 android:id="@+id/name"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="Pnny"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:layout_below="@+id/text2"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="30sp"/>

   			  <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/name"
                 android:layout_alignBottom="@+id/name"
                 android:layout_toRightOf="@+id/name"
                 android:text="@string/input_tip"
                 android:textSize="18sp" />
     
   			  <TextView 
   			       
                 android:id="@+id/tel_tv"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_below="@+id/name"
                 android:layout_marginLeft="30dp"
                 android:text="@string/input_phone_txt"
                 android:textSize="20sp"/>
     
   			  <TextView 
                 android:id="@+id/tel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/tel_tv"
                 android:layout_alignBaseline="@+id/tel_tv"
                 android:layout_alignBottom="@+id/tel_tv"
                 android:text="18814117797"
                 android:textSize="20sp"/>
     
   			  <TextView 
                 android:id="@+id/dorm_tv"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:layout_below="@+id/tel_tv"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/input_place_txt"
                 android:textSize="20sp"/>
     
     
   			  <TextView 
                 android:id="@+id/dorm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/dorm_tv"
                 android:layout_alignBaseline="@+id/dorm_tv"
                 android:text="G114"
                 android:textSize="20sp"/>
     
   			  <RelativeLayout 
                 android:id="@+id/time_rl"
                 android:layout_height="100dp"
                 android:layout_width="fill_parent"
                 android:background="@color/project_color_bg"
                 android:layout_below="@+id/dorm_tv">
                 
   			      
              	  <TextView
              	      
                      android:id="@+id/pick_time_tv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentLeft="true"
                      android:layout_marginLeft="40dp"
                      android:layout_marginTop="20dp"
                      android:text="@string/arrive_time"
                      android:textColor="#000000"
                      android:textSize="18sp" />

                  <TextView
                      android:id="@+id/pick_date"
                      android:layout_width="fill_parent"
                      android:layout_height="30dp"
                      android:layout_alignParentRight="true"
                      android:layout_marginTop="20dp"
                      android:layout_marginLeft="10dp"
                      android:layout_toRightOf="@+id/pick_time_tv"
                      android:textColor="#000000"
                      android:textSize="18dp"
                   	  android:background="@null" />
                
                  <Spinner 
                      android:id="@+id/pick_time"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/pick_date"
                      android:background="@null"
                      android:layout_alignLeft="@id/pick_date"/>
         
   			  </RelativeLayout>
     
   			  <RelativeLayout
   			       android:id="@+id/pick_way_rl"
   			       android:layout_width="fill_parent"
   			       android:layout_height="70dp"
   			       android:background="@color/project_color_bg"
   			       android:layout_below="@+id/time_rl">
                 
         
                 <TextView 
                     android:id="@+id/pick_way_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="30dp"
                     android:text="@string/picking_way"
                     android:textSize="20sp"/>
         
                 <ImageView 
                     android:id="@+id/image2"
                     android:layout_height="20dp"
                     android:layout_width="20dp"
                     android:background="@drawable/more1"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="20dp"/>
         
                 <TextView 
                     android:id="@+id/pick_way"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:layout_toLeftOf="@+id/image2"
                     android:layout_centerVertical="true"
                     android:text="自取"
                     android:textSize="20sp"/>
   			  </RelativeLayout>
     
     
   			  <Button 
   			      
   			      android:id="@+id/submit"
   			      android:layout_width="200dp"
   			      android:layout_height="wrap_content"
   			      android:layout_below="@+id/pick_way_rl"
   			      android:layout_alignParentRight="true"
   			      android:layout_marginRight="20dp"
   			      android:layout_marginTop="20dp"
   			      android:text="@string/btn_submit_txt"
   			      android:textSize="20sp"/>
             
         </RelativeLayout>
         
     </ScrollView>

</RelativeLayout>
